Jaynes maximum entropy

--- a/Capitulos/cap1.tex
+++ b/Capitulos/cap1.tex
@@ -64,9 +64,35 @@ es decir hay independencia entre las partículas esto es el caso para un gas que
 \\
 La mecánica estadística que introdujo Gibbs tenía como base la idea de la distribución microcanónica, esta es básicamente que: $\rho(q,p)$ es una distribución de densidad en el espacio de fase, la cual es cero en todo las excepto entre $E$ y $E+ \Delta E$. Donde $\Delta E$ es bastante pequeña, en esta superficie de energía $\rho$ tiene un valor constante. La idea física de detrás de esta distribución es bastante simple de exponer. Desde la perspectiva de la teoría de probabilidad cuando no se tiene un conocimiento del problema que se quiere tratar se supone que no hay razón para darle un mayor peso a algún resultado en especial, dada la ignorancia subjetiva que se tiene. Entonces al no conocer nada del sistema se dice que todos los resultados tienen la misma probabilidad de salir, luego la distribución de probabilidad es constante. Luego si tengo un sistema físico del que conozco solo su estado macroscópico, estos parámetros me pueden dar varios posibles estados microscópicos. Dado que no tengo más información supongo que cada posible estado microscópico tiene la misma probabilidad de ser el estado en el que el sistema se encuentra en realidad. Este es uno de los problemas al fundamentar la mecánica estadística porque se basa en la ignorancia subjetiva que se tiene del sistema. Muchos argumentan que las teorías físicas deben ser edificadas en ideas objetivas, y que una rama tan importante de la física se asiente en algo como la ignorancia propia deja mucho que desear. Además aunque esta idea se base en la teoría de la probabilidad también ha sido muy criticada en las matemáticas. Hay preguntas como: si se llegará a conocer un poco más del sistema, ¿ aún sería válida la distribución microcanónica?, ¿ si las probabilidades realmente tiene un peso que se les debería asignar?. En busca de evitar estas preguntas pero no volver a construir toda una teoría lo que se propone es intercambiar el principio de probabilidades iguales por una idea más estable que tenga las mismas implicaciones que ese principio y se vuelva a la mecánica estadística actual.
 \\
-E.T Jaynes viendo este problema propuso una conexión entre la teoría de la información clásica y la mecánica estadística que podría resolver el problema del principio de probabilidades iguales. 
-
-
+Este problema ha llamado la atención de varias personas y han existido muchos intentos para poder resolver estos problemas. Se ha intentado basar la mecánica estadística en otras ideas. E.T Jaynes propone una relación entre la mecánica estadística y la teoría clásica de la información \cite{JaynesI},\cite{JaynesII}. Jaynes impulsado por la falta de un argumento que conecte los fenómenos microscópicos y los macroscópicos. Procede a estipular que para tener una mecánica estadística libre de objeciones esta debería seguir los siguientes requerimientos: libre de incongruencias matemáticas, no debería tener suposiciones externas arbitrarias y debería ser capaz de describir procesos tanto fuera del equilibrio como en equilibrio. Jaynes explica que la segunda condición parece extraña al hablar de una teoría física porque en general se proponen hipótesis que luego se muestran como pueden ser explicadas. Pone el ejemplo de la unidad de volumen en el espacio de fase que inicialmente fue puesta para poder conseguir los valores correctos de la presión de vapor en equilibrio, luego con la ayuda de la teoría cuántica se vio que esta unidad salía naturalmente de las leyes físicas. Esto hace que Jaynes proponga que la mecánica estadística sea un ejemplo de inferencia estadística. Como la expresión $- \sum p_{i} \log p_{i}$ aparece en la teoría de la información, que es una teoría de inferencia estadística, y en la mecánica estadística, Jaynes expone como crear una conexión entre las dos teorías haciendo que esta fórmula tenga el mismo concepto y así poder aplicar la teoría de la información clásica a la mecánica estadística. Con esto Jaynes muestra un simplificación de la matemática y dice que la mecánica estadística puede afrontar problemas más generales y nuevos problemas físicos.
+\\
+Toda la perspectiva de Jaynes se basa en el principio de máxima entropía. Para poder entender este principio se plantea un problema que ocurre en muchos casos no solo en la física. Sea $x$ una cantidad discreta que puede tener valores $x_{i}$ con $i=1,2,...,n$. No se saben las probabilidades correspondientes $p_{i}$. Lo único que se  conoce del problema son los promedios de la función $f(x)$,
+\begin{equation}
+\langle f(x) \rangle =\sum_{i}^{N} p_{i} f(x_{i}).
+\end{equation}
+Entonces la pregunta que se hace es: ¿ con esta información cuál es el valor esperado de la función $g(x)$?. Esta clase de problemas aparecen en muchas áreas, como la teoría de la información, porque este es un problema de la teoría de la probabilidad. Encontrar las probabilidades con poca información es un problema en el que trabajaron los padres de la probabilidad. El principio dado por Laplace es un intento de resolver el problema, este principio asigna probabilidades iguales a dos eventos. Jaynes dice que a menos que haya una simetría en el problema se encuentran paradojas en los casos continuos. Por eso este tipo de formulaciones se ha dejado de usar en los problemas actuales continua diciendo Jaynes.
+\\
+Para poder seguir exponiendo el planteamiento de Jaynes se debe entender que la perspectiva que acepta sobre la teoría de la probabilidad es una subjetiva. Esto quiere decir que como J.M. Keynes o H. Jeffreys acepta que las probabilidades son una cuantificación de la ignorancia humana. La probabilidad es solo una medida basada en la información que se tiene sobre el posible resultado que puede salir. Entonces la distribución de probabilidad solo es la representación del estado actual de nuestro conocimiento. \\
+En contraposición con la perspectiva objetiva que dice que la probabilidad es la proporción de frecuencias de un experimento, calculando la distribución de probabilidad se está haciendo una predicción que se puede en principio comparar con el experimento. Esta perspectiva acepta las probabilidades como algo externo del humano. Jaynes dice que la visión subjetiva es más general porque las proporciones de frecuencia siempre pueden interpretarse desde esta perspectiva. Además manifiesta que la posición subjetiva acepta interrogantes que para el objetivismo no tienen importancia. 
+\\
+Shannon en su teoría de la información propuso una función que describía de forma única y sin ambigüedad la cantidad de incertidumbre que tiene una distribución de probabilidad \cite{ShannonInformation}. Esta cantidad es positiva, se incrementa con una incertidumbre decreciente y es aditiva para fuentes de incertidumbres independientes.
+\begin{equation}
+H(p_{1},...,p_{N})=-k \sum_{i} p_{i} \ln p_{i},
+\end{equation}
+K es una constante positiva. Aquí Jaynes hace la conexión y es un punto importante. Esta cantidad Shannon la llama entropía pero no es la entropía termodinámica, se dice que Von Neumann le propuso este nombre a Shannon ya que nadie sabía realmente qué era la entropía. Pero Jaynes hace el puente entre las dos teorías diciendo que la entropía termodinámica es la  cantidad incertidumbre que se tiene del sistema. Entonces esto es lo que quiere decir el principio de la máxima entropía, dadas unas restricciones o sea con una información parcial se debe encontrar la distribución que minimice la incertidumbre. Esto es equivalente a maximizar $H$ bajo las condiciones conocidas. Esta es la forma de llegar a la distribución sin suposiciones arbitrarias que impondríamos bajo conjeturas que no estamos seguros de ser ciertas. Jaynes prosigue usando multiplicadores de Lagrange y obtiene los siguientes resultados para un número $m$ de funciones, dado  $\langle f_{r}(x) \rangle = \sum_{i} p_{i} f_{r} (x_{i})$:
+\begin{equation}
+p_{i}= \exp \{ -[\lambda_{0}+ \lambda_{1}f_{1}(x_{i})+...+\lambda_{m} f_{m}(x_{i})] \}.
+\end{equation}
+Donde los $\lambda$'s son los multiplicadores de Lagrange. Además se define la función de partición como
+\begin{equation}
+Z(\lambda_{1},...,\lambda_{m})=\sum_{i} \exp \{ -[ \lambda_{1}f_{1}(x_{i})+...+\lambda_{m} f_{m}(x_{i})] \}.
+\end{equation}
+Los multiplicadores de Lagrange se pueden encontrar por
+\begin{align*}
+\langle f_{r}(x) \rangle  &= - \frac{\partial}{\partial \lambda_{r}} \ln Z, \\
+\quad \lambda_{0} &= \ln Z.
+\end{align*}
+Jaynes argumenta que siguiendo este principio se llega a una distribución de probabilidad imparcial correspondiente a la información del problema, de forma inequívoca y única. También permite la modificación de la distribución de probabilidad si se llega a conocer más información. 
 
 
 
