--- a/main.tex
+++ b/main.tex
@@ -249,6 +249,9 @@
 \bibitem{Birkhoff}Birkhoff, G. (1931). Proof of the Ergodic Theorem. Proceedings Of The National Academy Of Sciences, 17(12), 656-660. http://dx.doi.org/10.1073/pnas.17.2.656
 \bibitem{SusskindQuantum}Susskind, L., \& Friedman, A. (2015). Quantum mechanics. UK: Penguin Books.
 \bibitem{ZettiliQuantum}Zettili, N. (2009). Quantum mechanics : concepts and applications.
+\bibitem{JaynesI} Jaynes, E. (1957). Information Theory and Statistical Mechanics. Physical Review, 106(4), 620-630. http://dx.doi.org/10.1103/physrev.106.620
+\bibitem{JaynesII} Jaynes, E. (1957). Information Theory and Statistical Mechanics. II. Physical Review, 108(2), 171-190. http://dx.doi.org/10.1103/physrev.108.171
+\bibitem{ShannonInformation}Shannon, C. (1948). A Mathematical Theory of Communication. Bell System Technical Journal, 27(3), 379-423. http://dx.doi.org/10.1002/j.1538-7305.1948.tb01338.x
 \end{thebibliography}
 
 
